// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should render 1`] = `
<DocumentFragment>
  <svg>
    welcome-banner.svg
  </svg>
</DocumentFragment>
`;

exports[`Image should render nothing if image can't be found 1`] = `<DocumentFragment />`;

exports[`Image should render with domain 1`] = `
<DocumentFragment>
  <svg>
    generic-error.svg
  </svg>
</DocumentFragment>
`;
